[tool.poetry]
name = "Ganeshahere_brain_games"
version = "0.1.0"
description = ""
authors = ["Ganesha_here <Jamper1488@gmail.com>"]
packages = [
{ include = "brain_games"},
]
[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main" 
[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
[[tool.poetry.source]]
name = "brain_games"
url = "https://test.pypi.org/legacy/"
secondary = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
